--- a/FIM/src/main/webapp/WEB-INF/html/userhome.html
+++ b/FIM/src/main/webapp/WEB-INF/html/userhome.html
@@ -2,11 +2,11 @@
 <head lang="en">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>UserDetails</title>
-<script src="./js/angular.min.js"></script>
+<script src="./js//angular/angular.min.js"></script>
 <link rel="stylesheet" href="./css/bootstrap.min.css"></link>
 <link rel="stylesheet" href="./css/userhome.css"></link>
-<script src="./js/usercontroller.js"></script>
-<script src="./js/userservice.js"></script>
+<script src="./js/user/usercontroller.js"></script>
+<script src="./js/user/userservice.js"></script>
 <link rel="icon" href="./images/register.png" type="image/gif" sizes="16x16">
 </head>
 <body>
