--- a/FIM/src/main/webapp/WEB-INF/html/findetailhome.html
+++ b/FIM/src/main/webapp/WEB-INF/html/findetailhome.html
@@ -1,60 +1,80 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head lang="en">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Hello</title>
-<script
-	src="./js/angular.min.js"></script>
-<link rel="stylesheet"
-	href="./css/bootstrap.min.css"></link>
-	<link rel="stylesheet" href="./css/userhome.css"></link>
-	<link rel="stylesheet" href="./css/ui-grid.css"></link>
-	<script src="./js/ui-grid.js"></script>
-	<script src="./js/fin/fincontroller.js"></script>
-	<script src="http://ui-grid.info/release/ui-grid-unstable.js"></script>
-    
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-resource.js"></script>
+<link rel="stylesheet" href="./css/bootstrap.min.css"></link>
+<link rel="stylesheet" href="./css/userhome.css"></link>
+<link rel="stylesheet" href="./css/ui-grid.css"></link>
+<script src="./js/angular/ui-grid.js"></script>
+<script src="./js/angular/angular-modal-service.js"></script>
+<script src="./js/fin/fincontroller.js"></script>
+<script src="./js/fin/finservice.js"></script>
+
 </head>
-<body>
-<div class="col-md-6 col-md-offset-3" ng-app="finApp" ng-controller="finController">
+<body ng-app="finApp">
+	<div class="col-md-6 col-md-offset-3" ng-controller="finController">
 		<h2>Finance Details</h2>
 		<br>
-		<form  name="finform" >
-		<div class="form-group" >
-				<label for="chitName">Chit Name:</label> <input type="text"  placeholder="Enter ChitName"
-					class="form-control" id="chitName" name="chitName" ng-model="chitName"  ng-pattern="/^[a-zA-Z0-9 ]*$/"
-					 ng-required="true"  ng-change="chitnameexsist()" ng-minlength="5"/>
-					 <span
-						ng-show=" finform.chitName.$error.pattern && (!finform.$pristine|| finform.$submitted)">Enter Alpha Numeric values only</span>
-						<span  ng-bind="chitnameerror" ng-valid="false">
-			</div>
-			<div class="form-group" >
-				<label for="chitAmount">Chit Amount:</label> <input type="number"  placeholder="Enter ChitAmount"
-					class="form-control" id="chitAmount" name="chitAmount" ng-model="chitAmount"  
-					 ng-required="true" min="500" 
-					max="10000" step="500" />
-					 <span
-						ng-show=" finform.chitAmount.$error.pattern && (!finform.$pristine|| finform.$submitted)">Enter Numeric values . Eg : 123, 1234, 12345</span>
+		<form name="finform">
+			<div class="form-group">
+				<label for="chitName">Chit Name:</label> <input type="text"
+					placeholder="Enter ChitName" class="form-control" id="chitName"
+					name="chitName" ng-model="chitName" ng-pattern="/^[a-zA-Z0-9 ]*$/"
+					ng-required="true" ng-change="chitnameexsist()" ng-minlength="5" />
+				<span
+					ng-show=" finform.chitName.$error.pattern && (!finform.$pristine|| finform.$submitted)">Enter
+					Alpha Numeric values only</span> <span ng-bind="chitnameerror"
+					ng-valid="false">
 			</div>
 			<div class="form-group">
-				<label for="chitMonths">Months :</label> <input type="number"  
-					class="form-control" id="chitMonths" name="chitMonths" ng-model="chitMonths" min="10" 
-					max="50" step="5" onkeydown="return false" />
+				<label for="chitAmount">Chit Amount:</label> <input type="number"
+					placeholder="Enter ChitAmount" class="form-control" id="chitAmount"
+					name="chitAmount" ng-model="chitAmount" ng-required="true"
+					min="500" max="10000" step="500" /> <span
+					ng-show=" finform.chitAmount.$error.pattern && (!finform.$pristine|| finform.$submitted)">Enter
+					Numeric values . Eg : 123, 1234, 12345</span>
 			</div>
 			<div class="form-group">
-				<label for="intrestRate">IntrestRate:</label> <input type="number" 
-					class="form-control" id="intrestRate" name="intrestRate" ng-model="intrestRate" 
-					min="1" max="10" step="0.25" onkeydown="return false" />
+				<label for="chitMonths">Months :</label> <input type="number"
+					class="form-control" id="chitMonths" name="chitMonths"
+					ng-model="chitMonths" min="10" max="50" step="5"
+					onkeydown="return false" />
 			</div>
 			<div class="form-group">
-				<label for="createdDate">Date:</label> <input type="date"  
-					class="form-control" id="createdDate" name="createdDate" ng-model="date" value={{createdDate}} onkeydown="return false"/>
+				<label for="intrestRate">IntrestRate:</label> <input type="number"
+					class="form-control" id="intrestRate" name="intrestRate"
+					ng-model="intrestRate" min="1" max="10" step="0.25"
+					onkeydown="return false" />
 			</div>
-			<button type="submit" class="btn btn-primary"  ng-disabled="finform.$invalid" ng-click="addfindetail(finform.$valid)">Submit</button>
+			<div class="form-group">
+				<label for="createdDate">Date:</label> <input type="date"
+					class="form-control" id="createdDate" name="createdDate"
+					ng-model="date" value={{createdDate}} onkeydown="return false" />
+			</div>
+			<button type="submit" class="btn btn-primary"
+				ng-disabled="finform.$invalid"
+				ng-click="addfindetail(finform.$valid)">Submit</button>
 		</form>
-			<input type="search" name="nameSearch" id="nameSearch" ng-model="nameSearch" ng-required="true">
+
+		<!--  <input type="search" name="nameSearch" id="nameSearch" ng-model="nameSearch" ng-required="true">
 	 		 <input type="submit" class="btn btn-primary" ng-disabled="searchform.$invalid" value="Search"ng-click="searchchitname()">
-		 <div ui-grid="gridOptions" class="grid"></div>
+		<div ui-grid="gridOptions" class="grid"></div> -->
 
 	</div>
+	<div class="col-md-6 col-md-offset-3" ng-controller="gridController">
+		<input type="search" name="nameSearch" id="nameSearch"
+			ng-model="nameSearch" ng-required="true"> <input
+			type="submit" class="btn btn-primary"
+			ng-disabled="searchform.$invalid" value="Search"
+			ng-click="searchchitname()">
+
+		<div ui-grid="gridOptions1" class="grid"></div>
+	</div>
+	
 </body>
 </html>
