--- a/FIM/src/main/webapp/WEB-INF/html/user/userhome.html
+++ b/FIM/src/main/webapp/WEB-INF/html/user/userhome.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="./css/userhome.css"></link>
 <script src="./js/user/usercontroller.js"></script>
 <script src="./js/user/userservice.js"></script>
-<link rel="icon" href="./images/register.png" type="image/gif" sizes="16x16">
+<link rel="icon" href="./images/user/register.png" type="image/gif" sizes="16x16">
 </head>
 <body>
 	<div ng-app="empform" ng-controller="empController as empc">
