--- a/FIM/src/main/webapp/WEB-INF/html/fin/findetailhome.html
+++ b/FIM/src/main/webapp/WEB-INF/html/fin/findetailhome.html
@@ -2,16 +2,21 @@
 <html>
 <head lang="en">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Hello</title>
-	<script
-		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+<title>Finance Details</title>
+	 <script
+		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script> 
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-resource.js"></script>
+	 	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script> 
 <link rel="stylesheet" href="./css/bootstrap.min.css"></link>
 <link rel="stylesheet" href="./css/userhome.css"></link>
 <link rel="stylesheet" href="./css/ui-grid.css"></link>
+<link rel="icon" href="./images/fin/fin.jpg" type="image/gif" sizes="32x32">
 <script src="./js/angular/ui-grid.js"></script>
-<script src="./js/angular/angular-modal-service.js"></script>
+<script src="./js/angular/angular.min.js"></script>
+<!-- <script src="./js/angular/angular.js"></script>
+<script src="./js/angular/angular-resource.js"></script>
+<script src="./js/angular/ui-bootstrap-tpls-0.13.4.js"></script>  -->
 <script src="./js/fin/fincontroller.js"></script>
 <script src="./js/fin/finservice.js"></script>
 
@@ -25,7 +30,8 @@
 				<label for="chitName">Chit Name:</label> <input type="text"
 					placeholder="Enter ChitName" class="form-control" id="chitName"
 					name="chitName" ng-model="chitName" ng-pattern="/^[a-zA-Z0-9 ]*$/"
-					ng-required="true" ng-change="chitnameexsist()" ng-minlength="5" />
+					ng-required="true" ng-change="chitnameexsist()" ng-minlength="5" 
+					"/>
 				<span
 					ng-show=" finform.chitName.$error.pattern && (!finform.$pristine|| finform.$submitted)">Enter
 					Alpha Numeric values only</span> <span ng-bind="chitnameerror"
@@ -51,11 +57,11 @@
 					ng-model="intrestRate" min="1" max="10" step="0.25"
 					onkeydown="return false" />
 			</div>
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<label for="createdDate">Date:</label> <input type="date"
 					class="form-control" id="createdDate" name="createdDate"
 					ng-model="date" value={{createdDate}} onkeydown="return false" />
-			</div>
+			</div> -->
 			<button type="submit" class="btn btn-primary"
 				ng-disabled="finform.$invalid"
 				ng-click="addfindetail(finform.$valid)">Submit</button>
