--- a/FIM/src/main/webapp/WEB-INF/html/user/userlist.html
+++ b/FIM/src/main/webapp/WEB-INF/html/user/userlist.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>User Details</title>
-<link rel="stylesheet" href="./css/bootstrap.min.css"></link>
-<link rel="stylesheet" href="./css/userhome.css"></link>
-<link rel="stylesheet" href="./css/ui-grid.css"></link>
-<link rel="icon" href="./images/fin/fin.jpg" type="image/gif" sizes="32x32">
-<script src="./js/angular/angular.js"></script>
-<script src="./js/angular/angular.min.js"></script>
-<script src="./js/angular/ui-grid.js"></script>
-<script src="././js/user/userlistcontroller.js"></script>
+
+<head>
+<link rel="styleSheet" href="http://ui-grid.info/release/ui-grid.min.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-animate.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-touch.min.js"></script>
+<script src="http://ui-grid.info/release/ui-grid.js"></script>
+<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
+
+
+
+<script src="./js/user/script.js"></script>
+
 </head>
-<body ng-app="userApp">
-	<div class="col-md-6 col-md-offset-1" ng-controller="userController">
-		<div ui-grid="userGridOptions" class="userGrid"></div>
+
+<body ng-app="influx">
+
+	<div ng-controller="MainCtrl as vm">
+		<div style="padding-left: 30px;">
+			<button type="button" id="addRow" class="btn btn-success" ng-click="addRow()">Add Row</button>
+		</div>
+		<br />
+		<div id="serviceGrid" 
+		ui-grid-move-columns 
+		ui-grid-selection
+		ui-grid-resize-columns
+		
+		ui-grid-pinning
+		ui-grid-exporter 
+		ui-grid-auto-resize
+		
+		ui-grid-edit
+		ui-grid="vm.serviceGrid" class="influxGrid"></div>
 	</div>
 	
 </body>
+
 </html>
