--- a/FIM/src/main/webapp/WEB-INF/html/fin/findetailhome.html
+++ b/FIM/src/main/webapp/WEB-INF/html/fin/findetailhome.html
@@ -3,20 +3,20 @@
 <head lang="en">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Finance Details</title>
-	 <script
+	<!--  <script
 		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script> 
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-resource.js"></script>
-	 	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script> 
+	 	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>  -->
+<script src="./js/angular/angular.js"></script>
+<script src="./js/angular/angular-resource.js"></script>
+<script src="./js/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
 <link rel="stylesheet" href="./css/bootstrap.min.css"></link>
 <link rel="stylesheet" href="./css/userhome.css"></link>
-<link rel="stylesheet" href="./css/ui-grid.css"></link>
+<link rel="stylesheet" href="./css/uigrid/ui-grid.css"></link>
 <link rel="icon" href="./images/fin/fin.jpg" type="image/gif" sizes="32x32">
 <script src="./js/angular/ui-grid.js"></script>
 <script src="./js/angular/angular.min.js"></script>
-<!-- <script src="./js/angular/angular.js"></script>
-<script src="./js/angular/angular-resource.js"></script>
-<script src="./js/angular/ui-bootstrap-tpls-0.13.4.js"></script>  -->
 <script src="./js/fin/fincontroller.js"></script>
 <script src="./js/fin/finservice.js"></script>
 
