--- a/FIM/src/main/webapp/WEB-INF/html/user/userhome.html
+++ b/FIM/src/main/webapp/WEB-INF/html/user/userhome.html
@@ -14,7 +14,7 @@
 		<div class="col-md-4 col-md-offset-3">
 			<h2>User Details</h2>
 			<br>
-			<form role="form" name="loginform" ng-submit="addUser(loginform.$valid)"
+			<form role="form" name="loginform" 
 				novalidate="novalidate">
 				<div class="form-group" >
 					<label for="firstName">FirstName:</label> <input type="text"
@@ -101,7 +101,13 @@
 						ng-model="empc.user.address" ng-required="true" >
 					</textarea>
 				</div>
-				<button type="submit"  ng-disabled="loginform.$invalid" class="btn btn-primary">Submit</button>
+				<div  class="modal-body" align="right">
+				<button type="submit" class="btn btn-primary"
+					ng-disabled="loginform.$invalid"
+					ng-click="addUser(loginform.$valid)">Submit</button>
+				<button type="submit" class="btn btn-primary"
+					 ng-click="cancel()">Cancel</button>
+			</div>
 			</form>
 		</div>
 	</div>
