--- a/FIM/src/main/webapp/WEB-INF/html/main.html
+++ b/FIM/src/main/webapp/WEB-INF/html/main.html
@@ -1,5 +1,5 @@
 <html>
 <h1>Welcome to FIM</h1>
-<a href="/userhome" class="btn btn-primary" >User</a>
+<a href="/userlist" class="btn btn-primary" >User</a>
 <a href="/findetailhome" class="btn btn-primary" >Fin Details</a>
 </html>
